--- a/InfraSim/Pages/Index.razor
+++ b/InfraSim/Pages/Index.razor
@@ -1,7 +1,16 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Counter</h1>
 
-Welcome to your new app.
+<p>Current count: @count</p>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<button @onclick="StartIncrementing">Increment</button>
+
+@code {
+    private int count = 0;
+
+    private void StartIncrementing()
+    {
+        count++;
+    }
+}
